# nossateca

./: .gitignore  OPENLIBRARYAPI.md  README.md  package-lock.json  package.json
lexicon/src-tauri/: Cargo.toml  tauri.conf.json
lexicon/src-tauri/.cargo/: config.toml
lexicon/src-tauri/examples/: repro_libgen_rich_dad_isbn.rs
lexicon/src-tauri/migrations/: 001_initial_schema.sql  002_annotations.sql  003_embeddings.sql  004_rag_optimizations.sql  005_downloads.sql  006_remove_ai_schema.sql  007_book_statuses.sql  008_manga_downloads.sql  009_cbz_book_format.sql
lexicon/src-tauri/plugins/: build-mock-plugin.sh
lexicon/src-tauri/plugins/annas-archive-source-plugin/: Cargo.toml
lexicon/src-tauri/plugins/libgen-li-plugin/: Cargo.toml
lexicon/src-tauri/plugins/libgen-source/: Cargo.toml
lexicon/src-tauri/plugins/libgen-source-plugin/: Cargo.toml
lexicon/src-tauri/plugins/mangadex-discover/: Cargo.toml
lexicon/src-tauri/plugins/mangadex-discover-plugin/: Cargo.toml
lexicon/src-tauri/plugins/mangadex-source/: Cargo.toml
lexicon/src-tauri/plugins/mangadex-source-plugin/: Cargo.toml
lexicon/src-tauri/plugins/mock-search-plugin/: Cargo.toml
lexicon/src-tauri/plugins/opds-public-plugin/: Cargo.toml
lexicon/src-tauri/plugins/openlibrary-discover/: Cargo.toml
lexicon/src-tauri/plugins/openlibrary-discover-plugin/: Cargo.toml
lexicon/src-tauri/plugins/openlibrary-source/: Cargo.toml
lexicon/src-tauri/plugins/openlibrary-source-plugin/: Cargo.toml
lexicon/src-tauri/src/: main.rs  storage.rs
lexicon/src-tauri/src/commands/: addons.rs  annotations.rs  discover.rs  download.rs  library.rs  manga.rs  mod.rs  reader.rs  search.rs
lexicon/src-tauri/src/db/: connection.rs  mod.rs
lexicon/src-tauri/wit/: discover-source-plugin.wit  search-plugin.wit
(+122 files in other folders)
